[tool.poetry]
name = "geo-service"
version = "0.1.0"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"

# Utils
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"
SQLAlchemy = "^2.0.25"
aiofiles = "^23.2.1"
obspy = "^1.4.0"
pandas = "^2.2.0"
APScheduler = "^3.10.4"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
